# mlx-harmony

./: .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  README.md  profile.dot  profile.stats  profile.stats.txt  profile.txt  pyproject.toml  pytest.ini  term.txt
.github/workflows/: README.md  ci.yml
configs/: conversation.example.json  dialogue.example.txt  moshi-config.example.json  profiles.example.json  prompt-config.example.json
docs/: ADDITIONAL_UNIT_TESTS.md  DEEPWIKI_MOSHI_NOTES.md  FEATURES_FROM_MLX.md  IMPLEMENTATION_SUMMARY.md  MEMORY_MANAGEMENT.md  MOSHI_CONFIG.md  NATIVE_TOKENIZER_PROPOSAL.md  NEW_PROJECT_DESIGN.md  NEXT_SPRINT_CHECKLIST.md  NOTES.md  PERFORMANCE_PLAN.md  PROMPT_CONFIG_REFERENCE.md  REFACTOR_CHECKLIST.md  REFACTOR_PLAN.md  ROADMAP.md  SERVER_GUIDE.md  SOURCE_FILE_MAP.md  TODO.md  TROUBLESHOOTING.md  timing_stats_benchmark.numbers
docs/diagrams/: moshi_end_to_end.dot  moshi_stt_loop.dot  moshi_tts_stream.dot  moshi_voice_arch.dot
examples/: README.md  basic_chat.py  conversation_resume.py  custom_placeholders.py  one_shot_generation.py  profile_usage.py  sampling_parameters.py  server_client.py  tools_example.py  with_prompt_config.py
log/: mia-chat.json
runs/save-20260128-0023-q8-20prompt/analysis/: LOC-stats.txt  function-analysis.txt
runs/save-20260128-0128-q8-20prompt/: quick-benchmark-20260125-2222-q8-20prompt.numbers
scripts/: README.md  TPSvsWiredMemory.py  bench_run.sh  build_prompt_stream.py  check_mic.py  clean_logs.sh  clean_run_artifacts.sh  dataset_run_common.sh  filter-vm_stat.py  filter_profile_dot.py  generate_reports.py  harmony_repro.py  hotmic.py  merge_timing_metrics.py  migrate_chat_schema.py  module_dep_graph.py  preserve_logs.sh  process_profile_artifacts.py  process_stats.sh  profile_chat.py  profile_chat_dataset.sh  profile_chat_stdin.sh  profile_chat_stdin.txt  profile_cli.sh  profile_client.py  profile_module.py  profile_reporting.py  profile_server.sh  profile_server_dataset.sh  profile_startup.py  realign_moshi_speech.sh  refactor_config_split.sh  remove_config_py.sh  rename_build.sh  run_dataset_harness.sh  run_profile.sh
src/mlx_harmony/: __init__.py  api_client.py  api_contract.py  api_routes.py  api_service.py  backend_api.py  backend_contract.py  backend_runtime.py  cache.py  chat.py  chat_adapters.py  chat_attempt.py  chat_backend.py  chat_bootstrap.py  chat_cli.py  chat_commands.py  chat_controller.py  chat_driver.py  chat_frontend.py  chat_generation.py  chat_harmony.py  chat_history.py  chat_io.py  chat_migration.py  chat_prompt.py  chat_retry.py  chat_tools.py  chat_turn.py  chat_types.py  chat_utils.py  check_mic.py  client.py  config.py  convert_dialogue.py  generate.py  generate_standalone.py  generator.py  load_optimized.py  loader.py  logging.py  (+6 more)
tests/: README.md  TEST_SUMMARY.md  conftest.py  test_api_client.py  test_api_contract.py  test_api_routes.py  test_api_service.py  test_chat.py  test_chat_backend.py  test_chat_commands.py  test_chat_migration.py  test_chat_utils.py  test_client.py  test_config.py  test_generator.py  test_imports.py  test_log_artifacts.py  test_moshi_config.py  test_prompt_cache.py  test_server.py  test_tools.py
tests/data/: chat_schema_v1.json  chat_schema_v2.json  english.json
tests/fixtures/: prompt_config.json
(+117 files in other folders)
