[project]
name = "mlx-harmony"
version = "0.1.0"
description = "Multi-model MLX inference with GPT-OSS Harmony format and tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlx-lm>=0.1.0",
    "openai-harmony>=0.0.8",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "aiohttp>=3.12.0",
    "docker>=7.1.0",
    "unicodefix @ git+https://github.com/unixwzrd/UnicodeFix.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",  # Required for FastAPI TestClient
    "black",
    "ruff",
    "gprof2dot",
    "snakeviz",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mlx_harmony"]

[project.scripts]
mlx-harmony-chat = "mlx_harmony.chat:main"
mlx-harmony-server = "mlx_harmony.server:main"
mlx-harmony-generate = "mlx_harmony.generate:main"
mlx-harmony-convert-dialogue = "mlx_harmony.convert_dialogue:main"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_model: marks tests that require downloading a model from HuggingFace",
]

[tool.coverage.run]
source = ["src/mlx_harmony"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
